--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,43 @@
 html, body {
     margin: 0;
     padding: 0;
+    background: #f5f5f5;
 }
 
 .content {
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+.shadow {
+    box-shadow: 1px 1px 10px 0px #000;
+}
+
 /* MENU BAR */
 .MenuBar {
     height: 50px;
     width: 100%;
-    background: red;
+    background: #4FC3F7;
+    display: flex;
+    justify-content: center;
 }
 
+.menuHolder {
+    width: 960px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+button {
+    border-radius: 5px;
+    margin-top: 12.5px;
+    border: none;
+    background: yellow;
+    height: 25px;
+}
 
 /* HEADER */
 header {
@@ -41,6 +62,7 @@ header {
 
 img {
     width: 100%;
+    border-radius: 10px;
 }
 
 h1, h2, h3 {
