--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,85 @@
 html, body {
     margin: 0;
     padding: 0;
-    background: #f5f5f5;
+    background-image: url("../afbeeldingen/bg (2).jpg");
+    background-position: center;
+    background-attachment: fixed;
+    color: rgba(0, 0, 0, 0.87);
 }
 
 .content {
-    margin-top: 10px;
     display: flex;
+    margin-top: 50px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    height: calc(100vh - 50px);
+    z-index: -1;
 }
 
 .shadow {
     box-shadow: 1px 1px 10px 0px #000;
 }
 
+/* CARD */
+.card {
+    width: 100%;
+    background: #f5f5f5;
+    max-width: 960px;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-flow: wrap;
+    align-items: center;
+}
+
 /* MENU BAR */
 .MenuBar {
+    top: 0;
+    position: fixed;
     height: 50px;
     width: 100%;
-    background: #4FC3F7;
+    background: rgba(181, 121, 12, 0.95);
     display: flex;
     justify-content: center;
+    align-content: center;
+    z-index: 2;
 }
+
+.listHolder {
+    display: flex;
+    justify-content: flex-end;
+    align-content: flex-end;
+    width: 960px;
+    padding-right: 30px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #039BE5;
+}
+
 
 .menuHolder {
     width: 960px;
@@ -31,22 +87,9 @@ html, body {
     justify-content: flex-end;
 }
 
-button {
-    border-radius: 5px;
-    margin-top: 12.5px;
-    border: none;
-    background: yellow;
-    height: 25px;
-}
-
 /* HEADER */
 header {
     width: 960px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-flow: wrap;
-    align-items: center;
 }
 
 #imgHolder {
