--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,13 @@ html, body {
 }
 
 .content {
+    width: 100% ;
     display: flex;
-    margin-top: 50px;
+    margin-top: 70px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 70px);
     z-index: -1;
 }
 
@@ -23,17 +24,17 @@ html, body {
 
 /* CARD */
 .card {
-    width: 100%;
+    width: calc(100% - 10px);
+    height: 360px;
     background: #f5f5f5;
     max-width: 960px;
     border-radius: 10px;
-    padding: 10px;
-    margin-top: 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-flow: wrap;
     align-items: center;
+    padding: 5px;
 }
 
 /* MENU BAR */
@@ -50,11 +51,16 @@ html, body {
 }
 
 .listHolder {
-    display: flex;
-    justify-content: flex-end;
-    align-content: flex-end;
     width: 960px;
-    padding-right: 30px;
+}
+
+.listHolder p {
+    margin: 0;
+    padding:1.5px;
+    float: left;
+    color: white;
+    font-size: 40px;
+
 }
 
 ul {
@@ -62,6 +68,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    float: right;
 }
 
 li {
@@ -87,13 +94,11 @@ li a:hover {
     justify-content: flex-end;
 }
 
-/* HEADER */
-header {
-    width: 960px;
-}
-
+/* FIRST CARD */
 #imgHolder {
     width: 50%;
+    display: flex;
+    justify-content: center;
 }
 
 #headerHolder {
@@ -105,6 +110,7 @@ header {
 
 img {
     width: 100%;
+    height: 100%;
     border-radius: 10px;
 }
 
