--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     background-image: url("../afbeeldingen/bg (2).jpg");
@@ -8,13 +9,13 @@ html, body {
 }
 
 .content {
-    width: 100% ;
+    width: 100%;
     display: flex;
     margin-top: 70px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: calc(100vh - 70px);
+    height: 100%;
     z-index: -1;
 }
 
@@ -22,22 +23,69 @@ html, body {
     box-shadow: 1px 1px 10px 0px #000;
 }
 
+
 /* CARD */
+
 .card {
     width: calc(100% - 10px);
-    height: 360px;
+    height: 100%;
     background: #f5f5f5;
     max-width: 960px;
     border-radius: 10px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     flex-flow: wrap;
     align-items: center;
     padding: 5px;
+    margin-bottom: 10px;
 }
 
+
+/*VOLG ONS*/
+
+.titleHolder,
+.iframeHolder {
+    width: 100%;
+}
+
+iframe {
+    width: 100%;
+    height: 700px;
+    border: none;
+}
+
+.iframeHolder {
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+
+/*MAKE A WISH*/
+
+.textHolder {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.textHolder p,
+.textHolder h1 {
+    text-align: left;
+    margin-left: 20px;
+    width: 90%;
+}
+
+.imgHolder {
+    height: 100%;
+    width: 50%;
+}
+
+
 /* MENU BAR */
+
 .MenuBar {
     top: 0;
     position: fixed;
@@ -47,20 +95,20 @@ html, body {
     display: flex;
     justify-content: center;
     align-content: center;
-    z-index: 2;
+    z-index: 3;
 }
 
 .listHolder {
     width: 960px;
 }
 
-.listHolder p {
+#title {
     margin: 0;
-    padding:1.5px;
+    padding: 1.5px;
     float: left;
     color: white;
     font-size: 40px;
-
+    text-decoration: none;
 }
 
 ul {
@@ -87,14 +135,15 @@ li a:hover {
     background-color: #039BE5;
 }
 
-
 .menuHolder {
     width: 960px;
     display: flex;
     justify-content: flex-end;
 }
 
+
 /* FIRST CARD */
+
 #imgHolder {
     width: 50%;
     display: flex;
@@ -114,6 +163,8 @@ img {
     border-radius: 10px;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-align: center;
 }
