--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html,
 body {
     margin: 0;
     padding: 0;
-    background-image: url("../afbeeldingen/bg (2).jpg");
+    background: #E3F2FD;
     background-position: center;
     background-attachment: fixed;
     color: rgba(0, 0, 0, 0.87);
@@ -98,7 +98,7 @@ iframe {
     position: fixed;
     height: 50px;
     width: 100%;
-    background: rgba(181, 121, 12, 0.95);
+    background: #2196F3;
     display: flex;
     justify-content: center;
     align-content: center;
