--- a/css/mobile.css
+++ b/css/mobile.css
@@ -26,7 +26,9 @@ section {
 }
 
 .shadow {
-    box-shadow: 1px 1px 10px 0px #000;
+   -webkit-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
+-moz-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
+box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
 }
 
 /*Menu*/
@@ -37,11 +39,13 @@ nav{
     background: #2196F3;
     position: fixed;
     top: 0;
+    z-index: 100;
 }
 
 .nav__size__holder {
     max-width: 960px;
     width: 100%;
+    height: 50px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -69,6 +73,12 @@ nav ul a {
 .nav__left{
     float: left;
     width: 50%;
+    z-index: 100;
+}
+
+.nav__left li a {
+    font-size: 25px;
+    padding:  10px 0px;
 }
 
 .nav__right {
@@ -76,7 +86,8 @@ nav ul a {
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
     width: 100%;
-    transform: translateX(102%);
+    transform: translate(102%,-1px);
+    z-index: 0 !important;
 }
 
 nav .material-icons {
@@ -88,6 +99,15 @@ nav .material-icons {
     justify-content: center;
     align-content: center;
     align-items: center;
+    z-index: 100;
+}
+
+.animatable {
+    transition: transform 0.2s cubic-bezier(0,0,0.3,1);
+}
+
+.move__left {
+    transform: translate(0, -1px);
 }
 
 /*Card*/
