--- a/css/mobile.css
+++ b/css/mobile.css
@@ -26,9 +26,9 @@ section {
 }
 
 .shadow {
-   -webkit-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
--moz-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
+    box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
 }
 
 /*Menu*/
@@ -40,6 +40,8 @@ nav{
     position: fixed;
     top: 0;
     z-index: 100;
+    display: flex;
+    justify-content: center;
 }
 
 .nav__size__holder {
@@ -48,6 +50,7 @@ nav{
     height: 50px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 nav ul {
@@ -161,6 +164,12 @@ h3 {
     text-align: center;
 }
 
+.zusTextHolder {
+    padding: 10px;
+    width: 100%;
+    text-align: justify;
+}
+
 /*MAKE A WISH*/
 
 .textHolder {
@@ -173,7 +182,7 @@ h3 {
 
 .textHolder p,
 .textHolder h1 {
-    text-align: left;
+    text-align: justify;
     margin: 10px;
     width: 90%;
 }
@@ -236,11 +245,6 @@ iframe {
     height: 100%;
     width: 100%;
     background: #2196F3;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
 }
 
 .sponsors p {
@@ -252,9 +256,20 @@ iframe {
 .sponsors a {
     padding: 5px;
     width: 100%;
+     max-width: 400px;
 }
 
 .sponsors a img {
     height: auto;
     width: 100%;
+}
+
+.sponsorHolder {
+    width: 100%;
+    max-width: 960px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
