--- a/css/mobile.css
+++ b/css/mobile.css
@@ -145,6 +145,12 @@ nav .material-icons {
     justify-content: center;
 }
 
+#kevHolder {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 #headerHolder {
     width: 100%;
     display: flex;
