--- a/css/mobile.css
+++ b/css/mobile.css
@@ -16,28 +16,25 @@ section {
 
 .content {
     width: 100%;
-    display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    max-width: 960px;
+    display: block;
     margin-top: 70px;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     height: 100%;
     z-index: -1;
 }
 
 .shadow {
-    -webkit-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
-    box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.75);
+    box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.75);
 }
+
 
 /*Menu*/
 
-nav{
+nav {
     width: 100%;
     height: 50px;
     background: #2196F3;
@@ -45,10 +42,14 @@ nav{
     top: 0;
     z-index: 100;
     display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
     justify-content: center;
 }
 
@@ -57,10 +58,14 @@ nav{
     width: 100%;
     height: 50px;
     display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
     flex-wrap: wrap;
     justify-content: space-around;
 }
@@ -85,7 +90,7 @@ nav ul a {
     color: white;
 }
 
-.nav__left{
+.nav__left {
     float: left;
     width: 50%;
     z-index: 100;
@@ -93,7 +98,7 @@ nav ul a {
 
 .nav__left li a {
     font-size: 25px;
-    padding:  10px 0px;
+    padding: 10.5px 8px;
 }
 
 .nav__right {
@@ -101,7 +106,7 @@ nav ul a {
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
     width: 100%;
-    transform: translate(102%,-1px);
+    transform: translate(102%, -1px);
     z-index: 0 !important;
 }
 
@@ -111,10 +116,15 @@ nav .material-icons {
     width: 50%;
     text-align: center;
     display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */;
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
+    ;
     justify-content: center;
     align-content: center;
     align-items: center;
@@ -122,12 +132,13 @@ nav .material-icons {
 }
 
 .animatable {
-    transition: transform 0.2s cubic-bezier(0,0,0.3,1);
+    transition: transform 0.2s cubic-bezier(0, 0, 0.3, 1);
 }
 
 .move__left {
     transform: translate(0, -1px);
 }
+
 
 /*Card*/
 
@@ -138,10 +149,14 @@ nav .material-icons {
     max-width: 960px;
     border-radius: 2px;
     display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
     flex-direction: column;
     justify-content: center;
     flex-flow: wrap;
@@ -157,35 +172,48 @@ nav .material-icons {
     visibility: hidden;
 }
 
+
 /* Zusjes */
 
 #imgHolder {
     width: 100%;
     display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
     justify-content: center;
 }
 
 #kevHolder {
     width: 100%;
     display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
     justify-content: center;
 }
 
 #headerHolder {
     width: 100%;
     display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
     flex-direction: column;
     justify-content: center;
 }
@@ -203,10 +231,15 @@ h3 {
 }
 
 .zusTextHolder {
-    padding: 10px;
+    padding: 0px;
     width: 100%;
     text-align: justify;
 }
+
+.zusTextHolder p {
+    padding: 10px;
+}
+
 
 /*MAKE A WISH*/
 
@@ -214,10 +247,14 @@ h3 {
     height: 100%;
     width: 100%;
     display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
     flex-direction: column;
     justify-content: space-between;
 }
@@ -234,6 +271,7 @@ h3 {
     width: 100%;
     margin: 0px 10px;
 }
+
 
 /*VOLG ONS*/
 
@@ -257,6 +295,11 @@ iframe {
     padding: 5px;
 }
 
+.titleHolder {
+    padding-top: 20px;
+}
+
+
 /*Sponsors */
 
 .sponsors {
@@ -264,10 +307,14 @@ iframe {
     width: 100%;
     background: #2196F3;
     display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -302,7 +349,7 @@ iframe {
 .sponsors a {
     padding: 5px;
     width: 100%;
-     max-width: 400px;
+    max-width: 400px;
 }
 
 .sponsors a img {
@@ -314,10 +361,14 @@ iframe {
     width: 100%;
     max-width: 960px;
     display: flex;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
     flex-direction: row;
     justify-content: center;
     align-items: center;
