--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,72 @@
-
 @media screen and (min-width: 769px) {
-
-/*Menu*/
-
-.nav .material-icons {
-    display: none;
-}
-
-.nav__right {
-    width: 50%;
-    transform: none;
-    display: flex;
-    justify-content: flex-end;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    text-align: center;
-    padding: 16px;
-    color: white;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #1565C0;
-    color: white;
-}
-
-/*Zusjes*/
-
-#imgHolder {
-    width: 50%;
-}
-
-#headerHolder {
-    width: 50%;
-}
-
-#kevHolder {
-    width: 50%;
-    order: 4;
-}
-
-.zusTextHolder {
-    padding: 0;
-    width: 50%;
-    order: 3;
-}
-
-.zusTextHolder p {
-    padding: 0px 10px;
-}
-
-/*Make a wisht */
-
-.textHolder {
-    width: 50%;
-}
-
-.imgHolder {
-    width: 50%;
-    margin: 0px;
-}
-
-.imgHolder img {
-    margin: 0px 10px;
-}
-
-.textHolder p,
-.textHolder h1 {
-    margin: 0px 10px 0px 10px;
-    width: 100%;
-}
-
-
-
-}
-
-@media screen and (min-width: 961px){
-    .card {
-      overflow: hidden;
+    /*Menu*/
+    .nav .material-icons {
+        display: none;
     }
+    .nav__right {
+        width: 50%;
+        transform: none;
+        display: flex;
+        justify-content: flex-end;
+    }
+    li {
+        float: left;
+    }
+    li a {
+        display: block;
+        text-align: center;
+        padding: 16px;
+        color: white;
+        text-decoration: none;
+    }
+    li a:hover {
+        background-color: #1565C0;
+        color: white;
+    }
+    /*Zusjes*/
+    #imgHolder {
+        width: 50%;
+    }
+    #headerHolder {
+        width: 50%;
+    }
+    #kevHolder {
+        width: 50%;
+        order: 4;
+    }
+    .zusTextHolder {
+        width: 50%;
+        order: 3;
+        line-height: 300%;
+        font-size: 17px;
+    }
+    .zusTextHolder p {
+        padding: 0px 10px;
+    }
+    /*Make a wish */
+    .textHolder {
+        width: 50%;
+    }
+    .imgHolder {
+        width: 50%;
+        margin: 0px;
+    }
+    .imgHolder img {
+        margin: 0px 10px;
+    }
+    p,
+    h1 {
+        margin: 0px 30px 10px !important;
+    }
+}
 
-    img, .iframeHolder, .card {
+@media screen and (min-width: 961px) {
+    .card {
+        overflow: hidden;
+    }
+    img,
+    .iframeHolder,
+    .card {
         border-radius: 10px;
     }
 }
